restructuration de l'api
