# app/Http/Controllers/Annotations/CommentapublicationAnnotationController.php
@@ -25,6 +25,22 @@ namespace App\Http\Controllers\Annotations ;
 
  *
 
+ * @OA\GET(
+ *     path="/api/comments",
+ *     summary="Reading all commentaire",
+ *     description="",
+ *         security={
+ *    {       "BearerAuth": {}}
+ *         },
+ * @OA\Response(response="200", description="OK"),
+ * @OA\Response(response="404", description="Not Found"),
+ * @OA\Response(response="500", description="Internal Server Error"),
+ *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
+ * ),
+ *     tags={"Comment a publication"},
+*),
+
+
  * @OA\POST(
  *     path="/api/comments",
  *     summary="Create comment",
